--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.2",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/community": "^0.0.35",
     "@langchain/openai": "^0.0.18",
@@ -18,6 +19,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@remixicon/react": "^4.2.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.1.0",
@@ -31,11 +33,13 @@
     "eslint-plugin-tailwindcss": "^3.14.3",
     "langchain": "^0.1.25",
     "lucide-react": "^0.354.0",
+    "mongoose": "^8.5.3",
     "next": "14.1.3",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "svix": "^1.30.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
